--- a/base/docker-compose.yaml
+++ b/base/docker-compose.yaml
@@ -49,7 +49,7 @@ x-init-ollama: &init-ollama
 
 services:
   postgres:
-    image: postgres:16-alpine
+    image: postgres:17
     hostname: postgres
     networks: ['demo']
     restart: unless-stopped
