--- a/base/docker-compose.yaml
+++ b/base/docker-compose.yaml
@@ -6,6 +6,10 @@ volumes:
 
 networks:
   demo:
+  # ingress network
+  ingress:
+    external: true
+    name: external_web
 
 x-n8n: &service-n8n
   image: n8nio/n8n:latest
@@ -19,7 +23,14 @@ x-n8n: &service-n8n
     - N8N_PERSONALIZATION_ENABLED=false
     - N8N_ENCRYPTION_KEY
     - N8N_USER_MANAGEMENT_JWT_SECRET
-    - OLLAMA_HOST=${OLLAMA_HOST:-ollama:11434}
+    - OLLAMA_HOST=${OLLAMA_HOST:-http://ollama:11434}
+
+    - WEBHOOK_URL=https://n8n.cirg.uw.edu
+    - N8N_PROXY_HOPS=1
+    # - N8N_HOST=n8n.cirg.uw.edu
+    - N8N_LISTEN_ADDRESS=0.0.0.0
+    - N8N_HOST=0.0.0.0
+    - N8N_PROTOCOL=https
 
 x-ollama: &service-ollama
   image: ollama/ollama:latest
@@ -39,7 +50,7 @@ x-init-ollama: &init-ollama
     - ollama_storage:/root/.ollama
   entrypoint: /bin/sh
   environment:
-    - OLLAMA_HOST=ollama:11434
+    - OLLAMA_HOST=http://ollama:11434
   command:
     - "-c"
     - "sleep 3; ollama pull llama3.2"
@@ -78,11 +89,13 @@ services:
 
   n8n:
     <<: *service-n8n
-    hostname: n8n
-    container_name: n8n
+    # hostname: n8n
+    # container_name: n8n
     restart: unless-stopped
-    ports:
-      - 5678:5678
+    # ports:
+    #   - 5678:5678
+    expose:
+      - 5678
     volumes:
       - n8n_storage:/home/node/.n8n
       - ./n8n/demo-data:/demo-data
@@ -92,6 +105,20 @@ services:
         condition: service_healthy
       n8n-import:
         condition: service_completed_successfully
+
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.n8n-${COMPOSE_PROJECT_NAME}.rule=Host(`n8n.${BASE_DOMAIN:-cirg.uw.edu}`)
+      - traefik.http.routers.n8n-${COMPOSE_PROJECT_NAME}.entrypoints=websecure
+      - traefik.http.routers.n8n-${COMPOSE_PROJECT_NAME}.tls=true
+      - traefik.http.routers.n8n-${COMPOSE_PROJECT_NAME}.tls.certresolver=letsencrypt
+
+      # - traefik.http.services.n8n-${COMPOSE_PROJECT_NAME}.loadbalancer.server.port=5678
+    networks:
+      - ingress
+      - demo
+      - default
+
 
   qdrant:
     image: qdrant/qdrant
