--- a/base/docker-compose.yaml
+++ b/base/docker-compose.yaml
@@ -16,18 +16,16 @@ x-n8n: &service-n8n
   networks:
     - internal
   environment:
-    - DB_TYPE=postgresdb
-    - DB_POSTGRESDB_HOST=postgres
-    - DB_POSTGRESDB_USER=${POSTGRES_USER}
-    - DB_POSTGRESDB_PASSWORD=${POSTGRES_PASSWORD}
-    - N8N_DIAGNOSTICS_ENABLED=false
-    - N8N_PERSONALIZATION_ENABLED=false
-    - N8N_ENCRYPTION_KEY
-    - N8N_USER_MANAGEMENT_JWT_SECRET
-    - OLLAMA_HOST=${OLLAMA_HOST:-http://ollama:11434}
+    DB_TYPE: postgresdb
+    DB_POSTGRESDB_HOST: postgres
+    DB_POSTGRESDB_USER: ${POSTGRES_USER}
+    DB_POSTGRESDB_PASSWORD: ${POSTGRES_PASSWORD}
+    N8N_DIAGNOSTICS_ENABLED: false
+    N8N_PERSONALIZATION_ENABLED: false
+    OLLAMA_HOST: ${OLLAMA_HOST:-http://ollama:11434}
 
-    - WEBHOOK_URL=https://n8n.cirg.uw.edu
-    - N8N_LISTEN_ADDRESS=0.0.0.0
+    WEBHOOK_URL: https://n8n.cirg.uw.edu
+    N8N_LISTEN_ADDRESS: 0.0.0.0
 
 x-ollama: &service-ollama
   image: ollama/ollama:latest
