--- a/base/docker-compose.yaml
+++ b/base/docker-compose.yaml
@@ -45,7 +45,7 @@ x-init-ollama: &init-ollama
     - ollama_storage:/root/.ollama
   entrypoint: /bin/sh
   environment:
-    - OLLAMA_HOST=http://ollama:11434
+    OLLAMA_HOST: http://ollama:11434
   command:
     - -c
     - sleep 3; ollama pull llama3.2
@@ -57,9 +57,9 @@ services:
       - internal
     restart: unless-stopped
     environment:
-      - POSTGRES_USER
-      - POSTGRES_PASSWORD
-      - POSTGRES_DB
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: n8n
     volumes:
       - postgres_storage:/var/lib/postgresql/data
     healthcheck:
