--- a/base/docker-compose.yaml
+++ b/base/docker-compose.yaml
@@ -20,13 +20,16 @@ x-n8n: &service-n8n
     DB_POSTGRESDB_HOST: postgres
     DB_POSTGRESDB_USER: postgres
     DB_POSTGRESDB_PASSWORD: password
-    N8N_DIAGNOSTICS_ENABLED: false
     N8N_PERSONALIZATION_ENABLED: false
     OLLAMA_HOST: ${OLLAMA_HOST:-http://ollama:11434}
 
     WEBHOOK_URL: https://n8n.cirg.uw.edu
     N8N_LISTEN_ADDRESS: 0.0.0.0
 
+    # disable telemetry etc
+    N8N_DIAGNOSTICS_ENABLED: false
+    N8N_VERSION_NOTIFICATIONS_ENABLED: false
+    N8N_TEMPLATES_ENABLED: false
 x-ollama: &service-ollama
   image: ollama/ollama:latest
   networks:
