--- a/base/docker-compose.yaml
+++ b/base/docker-compose.yaml
@@ -20,16 +20,17 @@ x-n8n: &service-n8n
     DB_POSTGRESDB_HOST: postgres
     DB_POSTGRESDB_USER: postgres
     DB_POSTGRESDB_PASSWORD: password
-    N8N_PERSONALIZATION_ENABLED: false
-    OLLAMA_HOST: ${OLLAMA_HOST:-http://ollama:11434}
+    OLLAMA_HOST: http://ollama:11434
+    N8N_DEFAULT_BINARY_DATA_MODE: filesystem
 
-    WEBHOOK_URL: https://n8n.cirg.uw.edu
+    WEBHOOK_URL: https://n8n.${BASE_DOMAIN}
     N8N_LISTEN_ADDRESS: 0.0.0.0
 
     # disable telemetry etc
     N8N_DIAGNOSTICS_ENABLED: false
     N8N_VERSION_NOTIFICATIONS_ENABLED: false
     N8N_TEMPLATES_ENABLED: false
+    N8N_PERSONALIZATION_ENABLED: false
 x-ollama: &service-ollama
   image: ollama/ollama:latest
   networks:
@@ -100,7 +101,7 @@ services:
 
     labels:
       - traefik.enable=true
-      - traefik.http.routers.n8n-${COMPOSE_PROJECT_NAME}.rule=Host(`n8n.${BASE_DOMAIN:-cirg.uw.edu}`)
+      - traefik.http.routers.n8n-${COMPOSE_PROJECT_NAME}.rule=Host(`n8n.${BASE_DOMAIN}`)
       - traefik.http.routers.n8n-${COMPOSE_PROJECT_NAME}.entrypoints=websecure
       - traefik.http.routers.n8n-${COMPOSE_PROJECT_NAME}.tls=true
       - traefik.http.routers.n8n-${COMPOSE_PROJECT_NAME}.tls.certresolver=letsencrypt
