--- a/dev/default.env
+++ b/dev/default.env
@@ -1,7 +1,2 @@
-N8N_ENCRYPTION_KEY=super-secret-key
-N8N_USER_MANAGEMENT_JWT_SECRET=even-more-secret
-N8N_DEFAULT_BINARY_DATA_MODE=filesystem
-
-# For Mac users running OLLAMA locally
-# See https://github.com/n8n-io/self-hosted-ai-starter-kit?tab=readme-ov-file#for-mac--apple-silicon-users
-# OLLAMA_HOST=host.docker.internal:11434
+COMPOSE_PROJECT_NAME=
+BASE_DOMAIN=
