--- a/dev/docker-compose.yaml
+++ b/dev/docker-compose.yaml
@@ -19,14 +19,14 @@ services:
       file: ../base/docker-compose.yaml
       service: n8n-import
     env_file:
-      - path: .env
+      - path: n8n.env
         required: true
   n8n:
     extends:
       file: ../base/docker-compose.yaml
       service: n8n
     env_file:
-      - path: .env
+      - path: n8n.env
         required: true
   qdrant:
     extends:
