--- a/base/docker-compose.yaml
+++ b/base/docker-compose.yaml
@@ -12,7 +12,7 @@ networks:
     name: external_web
 
 x-n8n: &service-n8n
-  image: n8nio/n8n:latest
+  image: n8nio/n8n:${N8N_IMAGE_TAG:-2.0.3}
   networks:
     - internal
   environment:
@@ -56,7 +56,7 @@ x-init-ollama: &init-ollama
 
 services:
   postgres:
-    image: postgres:17
+    image: postgres:${POSTGRES_IMAGE_TAG:-17}
     networks:
       - internal
     restart: unless-stopped
