Move shared container folder to new n8n output dir
Match n8n default, where files can be written to
https://docs.n8n.io/2-0-breaking-changes/#set-default-value-for-n8n_restrict_file_access_to

--- a/dev/docker-compose.yaml
+++ b/dev/docker-compose.yaml
@@ -28,6 +28,8 @@ services:
     env_file:
       - path: n8n.env
         required: true
+    volumes:
+      - ./shared:/home/node/.n8n-files
   qdrant:
     extends:
       file: ../base/docker-compose.yaml
