--- a/dev/medgemma/docker-compose.yaml
+++ b/dev/medgemma/docker-compose.yaml
@@ -1,14 +1,16 @@
 services:
   medgemma:
     extends:
-      file: ../base/medgemma/docker-compose.yaml
+      file: ../../base/medgemma/docker-compose.yaml
       service: medgemma
     labels:
       - traefik.enable=true
-      - traefik.http.routers.medgemma-${COMPOSE_PROJECT_NAME}.rule=Host(`medgemma.${BASE_DOMAIN}`)
+      - traefik.http.routers.medgemma-${COMPOSE_PROJECT_NAME}.rule=Host(`${MEDGEMMA_DOMAIN}`)
       - traefik.http.routers.medgemma-${COMPOSE_PROJECT_NAME}.entrypoints=websecure
       - traefik.http.routers.medgemma-${COMPOSE_PROJECT_NAME}.tls=true
       - traefik.http.routers.medgemma-${COMPOSE_PROJECT_NAME}.tls.certresolver=letsencrypt
+    networks:
+      - ingress
 
 volumes:
   hf-cache:
