Move model to positional arg

--- a/base/medgemma/docker-compose.yaml
+++ b/base/medgemma/docker-compose.yaml
@@ -11,11 +11,10 @@ services:
     environment:
       HUGGING_FACE_HUB_TOKEN: ${HUGGING_FACE_HUB_TOKEN}
     command: >
-      --model google/medgemma-1.5-4b-it
       --dtype bfloat16
       --max-model-len 8192
       --gpu-memory-utilization 0.90
-
+      google/medgemma-1.5-4b-it
 
 volumes:
   hf-cache:
