--- a/dev/medgemma/docker-compose.yaml
+++ b/dev/medgemma/docker-compose.yaml
@@ -9,6 +9,14 @@ services:
       - traefik.http.routers.medgemma-${COMPOSE_PROJECT_NAME}.entrypoints=websecure
       - traefik.http.routers.medgemma-${COMPOSE_PROJECT_NAME}.tls=true
       - traefik.http.routers.medgemma-${COMPOSE_PROJECT_NAME}.tls.certresolver=letsencrypt
+      - traefik.http.routers.medgemma-${COMPOSE_PROJECT_NAME}.middlewares=medgemma-bearer@docker
+
+      # Middleware to enforce Bearer token
+      - traefik.http.middlewares.medgemma-bearer.headers.customrequestheaders.Authorization=Bearer ${OAI_API_KEY}
+      - traefik.http.middlewares.medgemma-bearer.headers.customResponseHeaders.Access-Control-Allow-Origin=*
+      - traefik.http.middlewares.medgemma-bearer.headers.customRequestHeaders.Authorization=Bearer ${OAI_API_KEY}
+      - traefik.http.middlewares.medgemma-bearer.headers.headerRegexp.Authorization=^Bearer ${OAI_API_KEY}$
+      - traefik.http.middlewares.medgemma-bearer.headers.requireHeader.Authorization=true
     networks:
       - ingress
 
