--- a/dev/medgemma/docker-compose.yaml
+++ b/dev/medgemma/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
       - traefik.http.routers.medgemma-secure.entrypoints=websecure
       - traefik.http.routers.medgemma-secure.tls=true
       - traefik.http.routers.medgemma-secure.tls.certresolver=letsencrypt
-      - traefik.http.routers.medgemma-secure.middlewares=medgemma-bearer@docker
+      - traefik.http.routers.medgemma-secure.middlewares=medgemma-bearer
 
       # Middleware to enforce Bearer token
       - traefik.http.middlewares.medgemma-bearer.headers.customrequestheaders.Authorization=Bearer ${OAI_API_KEY}
