--- a/dev/medgemma/docker-compose.yaml
+++ b/dev/medgemma/docker-compose.yaml
@@ -6,24 +6,19 @@ services:
     labels:
       - traefik.enable=true
 
-      # Router for /openapi.json (no auth)
+      # do not require auth for OpenAPI endpoint
       - traefik.http.routers.medgemma-openapi.rule=Host(`${MEDGEMMA_DOMAIN}`) && Path(`/openapi.json`)
       - traefik.http.routers.medgemma-openapi.entrypoints=websecure
       - traefik.http.routers.medgemma-openapi.tls=true
       - traefik.http.routers.medgemma-openapi.tls.certresolver=letsencrypt
+      - traefik.http.routers.medgemma-openapi.priority=100
 
-      # Router for all other paths (requires Bearer token)
-      - traefik.http.routers.medgemma-secure.rule=Host(`${MEDGEMMA_DOMAIN}`) && PathPrefix(`/`)
+      # require Bearer token for all other endpoints
+      - traefik.http.routers.medgemma-secure.rule=Host(`${MEDGEMMA_DOMAIN}`) && PathPrefix(`/`) && !Path(`/openapi.json`) && HeadersRegexp(`Authorization`, `^Bearer ${OAI_API_KEY}$`)
       - traefik.http.routers.medgemma-secure.entrypoints=websecure
       - traefik.http.routers.medgemma-secure.tls=true
       - traefik.http.routers.medgemma-secure.tls.certresolver=letsencrypt
-      - traefik.http.routers.medgemma-secure.middlewares=medgemma-bearer
-
-      # Middleware to enforce Bearer token
-      - traefik.http.middlewares.medgemma-bearer.headers.customrequestheaders.Authorization=Bearer ${OAI_API_KEY}
-      - traefik.http.middlewares.medgemma-bearer.headers.customResponseHeaders.Access-Control-Allow-Origin=*
-      - traefik.http.middlewares.medgemma-bearer.headers.headerRegexp.Authorization=^Bearer ${OAI_API_KEY}$
-      - traefik.http.middlewares.medgemma-bearer.headers.requireHeader.Authorization=true
+      - traefik.http.routers.medgemma-secure.priority=1
     networks:
       - ingress
 
